welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:13: error: NbBiscuit is already defined as variable NbBiscuit
 var NbBiscuit = 0
     ^