welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var NbBiscuit = 0 
while (sortieTrouvee()==false){
do {
  avance()
} while (crossing()==false)
var NbBiscuit = 0
if (estSurBiscuit()==true){
  NbBiscuit = NbBiscuit + 1
}
if (NbBiscuit > 2){
  gauche()
} else { droite()}
 var NbBiscuit = 0
}
avance()